Finished Alias functionality
